<resources>
    <string name="app_name">Alcologue</string>
    <string name="new_drink">Log your tipple</string>
    <string name="save">Save drink</string>
    <string name="enter_new_drink">What did you drink?</string>
    <string name="new_date">DD/MM/YY</string>
    <string name="new_time">Time (--:--)</string>
    <string name="where">Where?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="new_drink_toast">New Drink Added</string>
    <string name="delete_drink_toast">Drink Expunged</string>
</resources>
