<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background">

    <EditText
        android:id="@+id/new_drink_name"
        android:hint="@string/enter_new_drink"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/date_of_drink"
        android:hint="@string/new_date"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/time_of_drink"
        android:hint="@string/new_time"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/drink_location"
        android:hint="@string/where"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>